Fix Title overflow on mobile view

--- a/src/styles/partials/_responsive.scss
+++ b/src/styles/partials/_responsive.scss
@@ -102,7 +102,12 @@
 
 @media (max-width: 480px) {
   
-  #showcase h1 { font-size: 56px;   }
+  #showcase h1 { 
+    font-size: 56px;
+    display: block;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
   .unicode { width: 45%;}
 
 } // @media (max-width: 480px)
